--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 	<link href="reset.css" rel= "stylesheet">
 	<link href="style.css" rel= "stylesheet">
+	<div id="Contaoiner"
+	<meta name= "viewport" content= "width=device-width, intitial-scale=1.0">
 	</head>
 	<body>
 		<header>
@@ -15,6 +17,7 @@
 			</ul>
 		</header>
 	</body>
+</div>
 
 <html>
 	
